--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>Nuestro Mundo 💖</title>
+<title> Mi Mmundo Eres Tú 💖</title>
 <style>
 body{
 margin:0;
@@ -11,7 +11,7 @@ font-family:'Segoe UI', cursive;
 background:linear-gradient(270deg,#ff9a9e,#fad0c4,#fad0c4,#ff9a9e);
 background-size:800% 800%;
 animation:bg 15s ease infinite;
-color:white;
+color: sky blue;
 text-align:center;
 }
 @keyframes bg{
@@ -46,7 +46,7 @@ border-radius:30px;
 margin:10px;
 font-size:17px;
 cursor:pointer;
-transition:.3s;
+transition:.2s;
 }
 .yes{background:#00e676;color:white;}
 .no{background:#ff1744;color:white;position:absolute;}
@@ -79,7 +79,7 @@ animation:float 6s linear infinite;
 <div class="box hidden" id="contenido">
 <h2 id="texto"></h2>
 <div id="mensajes" class="hidden">
-<p>Eres mi casualidad favorita 💘</p>
+<p>Eres mi destino 💘</p>
 <p>Mi lugar seguro siempre serás tú 🥰</p>
 <p>Tu sonrisa es mi debilidad 😍</p>
 <p>Si la vida es sueño… quiero soñarte siempre ❤️</p>
@@ -105,7 +105,7 @@ document.getElementById("contenido").classList.remove("hidden");
 escribirTexto("Desbloqueando mensajes secretos...");
 setTimeout(()=>document.getElementById("mensajes").classList.remove("hidden"),2500);
 }else{
-alert("Clave incorrecta amorcito 😢");
+alert("Clave incorrecta amorcito 😢, vuelve a intentarlo :)");
 }
 }
 function escribirTexto(text){
