--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>Para Cielo 💖</title>
+<title>Mi Mundo Eres Tú 💖</title>
 
 <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Poppins:wght@300&display=swap" rel="stylesheet">
 
@@ -118,7 +118,7 @@ to{opacity:1; transform:translate(-50%,-50%)}
 <!-- LOGIN -->
 <div class="box" id="login">
 <h2>Bienvenida</h2>
-<div class="cielo">Cielo 💖</div>
+<div class="cielo">Mi Amor 💖</div>
 <p>La clave está en nuestro día mágico</p>
 <input type="password" id="pass">
 <br><br>
@@ -172,7 +172,7 @@ function checkPass(){
 if(pass.value==="031225"){
 login.classList.add("hidden");
 mostrarPregunta();
-}else alert("Clave incorrecta 😢");
+}else alert("Clave incorrecta 😢, vuelve a intentarlo mi amor :)");
 }
 
 function mostrarPregunta(){
@@ -222,3 +222,4 @@ carta.classList.remove("hidden");
 
 </body>
 </html>
+
