--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ to{transform:translateY(110vh) rotate(360deg);opacity:0}
 
 <!-- TITULO -->
 <div class="box hidden" id="tituloBox">
-<div class="titulo">MI MUNDO ERES TÚ</div>
+<div class="titulo">Mi Cielo &#129653</div>
 </div>
 
 <!-- CORAZON -->
