--- a/index.html
+++ b/index.html
@@ -107,6 +107,15 @@ animation:latido 1s infinite;
 }
 
 /* carta */
+
+.romantico{
+font-family:'Great Vibes',cursive;
+font-size:38px;
+color:#ffd6f2;
+text-shadow:0 0 15px #ff66cc;
+letter-spacing:2px;
+}
+
 .carta{
 position:absolute;
 top:50%;
@@ -145,8 +154,8 @@ to{transform:translateY(110vh) rotate(360deg);opacity:0}
 
 <!-- LOGIN -->
 <div class="box" id="login">
-<h2>Bienvenida</h2>
-<div>Cielo 💖</div>
+<h2 class="romantico">Bienvenida</h2>
+<div class="romantico">Cielo 💖</div>
 <p>La clave está en nuestro día mágico</p>
 <input type="password" id="pass">
 <br><br>
