--- a/index.html
+++ b/index.html
@@ -121,21 +121,61 @@ position:absolute;
 top:50%;
 left:50%;
 transform:translate(-50%,-50%);
-background:#fff0f6;
+width:500px;
+padding:60px;
+
+background:
+linear-gradient(rgba(255,240,246,.92),rgba(255,240,246,.92)),
+url("https://images.unsplash.com/photo-1520962918287-7448c2878f65?q=80&w=1200") center/cover;
+
+border-radius:25px;
+border:3px solid #ffc2ec;
+
+box-shadow:
+0 0 60px rgba(255,105,180,.7),
+inset 0 0 30px rgba(255,182,193,.5);
+
 color:#5a0033;
-padding:50px;
-border-radius:20px;
-width:460px;
-box-shadow:0 0 40px pink;
+
 font-family:'Great Vibes',cursive;
-font-size:26px;
-animation:fade 2s;
-}
-@keyframes fade{
-from{opacity:0}
-to{opacity:1}
+font-size:28px;
+line-height:1.6;
+
+animation:entradaCarta 2s ease;
+
+backdrop-filter:blur(2px);
 }
 
+/* animacion entrada */
+@keyframes entradaCarta{
+0%{
+opacity:0;
+transform:translate(-50%,-40%) scale(.8);
+}
+100%{
+opacity:1;
+transform:translate(-50%,-50%) scale(1);
+}
+}
+
+/* rosas decorativas */
+.carta::before,
+.carta::after{
+content:"🌹";
+position:absolute;
+font-size:40px;
+opacity:.7;
+}
+
+.carta::before{
+top:10px;
+left:15px;
+}
+
+.carta::after{
+bottom:10px;
+right:15px;
+}
 /* rosas */
 .rosa{
 position:fixed;
